added helps resource
